--- a/react/css/layout.css
+++ b/react/css/layout.css
@@ -1,6 +1,7 @@
 html, body {
     --bs-body-color: #d9d9d9;
-    --bs-dark-bg-subtle: #393939
+    --bs-dark-bg-subtle: #393939;
+    --bs-link-color-rgb: #0d6efd42;
 }
 
 .card {
