--- a/react/css/layout.css
+++ b/react/css/layout.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     --bs-body-color: #d9d9d9;
     --bs-dark-bg-subtle: #393939;
     --bs-link-color-rgb: #0d6efd42;
@@ -19,4 +20,34 @@ html, body {
     --bs-breadcrumb-item-active-color: #ebebeb;
     --bs-breadcrumb-divider: '';
     --bs-breadcrumb-margin-bottom: 0;
+}
+
+@keyframes example {
+    from {
+        width: 0px;
+    }
+
+    33% {
+        width: 4px;
+    }
+
+    66% {
+        width: 8px;
+    }
+
+    to {
+        width: 11px;
+    }
+}
+
+.dot-loader .dot-loader--dots:after {
+    display: inline-block;
+    content: '...';
+    overflow: hidden;
+    text-wrap: nowrap;
+    animation-name: example;
+    animation-duration: 2900ms;
+    animation-iteration-count: infinite;
+    vertical-align: text-bottom;
+
 }
